<resources>
    <string name="app_name">Firebase</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="login">Вход</string>
    <string name="don_t_have_account_sign_up">У Вас нет аккаунта? Зарегистрируйтесь</string>
    <string name="sign_up">Регистрация</string>
    <string name="already_have_an_account_login">У Вас уже есть аккаунт? Выполните вход</string>
    <string name="delete_user">Удалить пользователя</string>
    <string name="change_info_about_user">Изменить информацию о пользователе</string>
    <string name="tap_on_icon_to_choose_profile_picture">Нажмите на иконку, чтобы выбрать изображение профиля</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_group">Введите группу</string>
    <string name="enter_add_information">Введите дополнительую информацию</string>
    <string name="save">Сохранить</string>
    <string name="find">Найти</string>
    <string name="find_2">Найти...</string>
    <string name="save_changes">Сохранить изменения</string>
</resources>