<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextName"
        style="@style/EditText"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextSurname"
        style="@style/EditText"
        android:hint="@string/enter_surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextGroup"
        style="@style/EditText"
        android:hint="@string/enter_group"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextAddInfo"
        style="@style/EditText"
        android:hint="@string/enter_add_information"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            style="@style/TextView"
            android:text="@string/tap_on_icon_to_choose_profile_picture" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            style="@style/ImageView"
            android:src="@drawable/ic_person_white"
            android:background="@color/colorPrimary"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonSave"
        style="@style/Button"
        android:text="@string/save" />

</LinearLayout>