<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <TextView
                    style="@style/TextView"
                    android:text="@string/tap_on_icon_to_choose_profile_picture" />

                <ImageView
                    android:id="@+id/imageView_profile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    style="@style/ImageView"
                    android:src="@drawable/ic_person" />

                <ProgressBar
                    android:id="@+id/progressBar_profile_image"
                    style="@style/ProgressBar"
                    android:visibility="gone"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/editText_name"
                style="@style/EditText"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_surname"
                style="@style/EditText"
                android:hint="@string/enter_surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_group"
                style="@style/EditText"
                android:hint="@string/enter_group"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText_add_info"
                style="@style/EditText"
                android:hint="@string/enter_add_information"
                android:inputType="text" />



            <Button
                android:id="@+id/button_save"
                style="@style/Button"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>